fix: add gap between elements

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -21,6 +21,7 @@ ul {
   display: flex;
   flex-direction: row;
   padding: 10px;
+  gap: 10px;
 }
 
 a {
